# SkillRL

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: index.html
examples/: train_qa.py
skillrl/: __init__.py  config.py  trainer.py  types.py
skillrl/core/: __init__.py  editor.py  gate.py  scheduler.py  utils.py
skillrl/envs/: __init__.py  base.py  qa.py
skillrl/llm/: __init__.py  base.py  openai_client.py
skillrl/pipeline/: __init__.py  aggregate.py  reflect.py  rollout.py  select.py
skillrl/prompts/: __init__.py  analyst_error.md  analyst_success.md  merge_failure.md  merge_final.md  merge_success.md  ranking.md
tests/: test_basic.py
